# escuta-empatica

./: objetivo.md  pesquisa.md  pyproject.toml  readme.md
dados/generated_control/: 1.txt  10.txt  13.txt  14.txt  15.txt  18.txt  20.txt  22.txt  23.txt  24.txt  25.txt  30.txt  4.txt  6.txt  8.txt
dados/generated_example/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
dados/juliano_rigatti/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
dados/juliano_rigatti_en/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
dados/juliano_rigatti_en_extended/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
dados/prompts/: gen1-default.txt  (+5 more)
ee/: openai.py
notebooks/: compare.ipynb  default.ipynb  extend.ipynb  generated_crontrol.ipynb  generated_example.ipynb  sentiment_analysis copy.ipynb  sentiment_analysis.ipynb  sentiment_analysis_control.ipynb  sentiment_analysis_example.ipynb  sentiment_analysis_extended.ipynb  sentiment_analysis_synthetic.ipynb  synthetic.ipynb  test_prompts.ipynb
(+15 files in other folders)
