[tool.poetry]
name = "ee"
version = "0.1.0"
description = ""
authors = ["Leonardo Möllmann Schöller <leoscholler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
nltk = "^3.8.1"
numpy = "^2.0.0"
openai = "^1.35.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
